<resources>
    <string name="app_name">Personal Finance</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>


    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>


    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>


    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Settings</string>
    <!-- Drawer menu-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string-array name="drawer_menu">
        <item>Account Summary</item>
        <item>Charts</item>
        <item>History</item>
        <item>Fourth</item>
        <item>Settings</item>
        <item>Sign out</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title_activity_report">Report</string>
    <string name="done">Done</string>
    <string name="salary">Salary</string>
    <string name="rental_income">Rental income</string>
    <string name="interest">Interest</string>
    <string name="gifts">Gifts</string>
    <string name="other_income">Other income</string>
    <string name="taxes">Taxes</string>
    <string name="mortgage">Mortgage</string>
    <string name="credit_card">Credit card</string>
    <string name="utilities">Utilities</string>
    <string name="food">Food</string>
    <string name="car_payment">Car payment</string>
    <string name="personal">Personal</string>
    <string name="activities">Activities</string>
    <string name="other_expense">Other expense</string>
    <string name="filter">Filter</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="last_week">Last week</string>
    <string name="last_month">Last month</string>
    <string name="this_year">This year</string>
    <string name="trends">Trends</string>
    <string name="overview">Overview</string>


    <string-array name="account_summary_spinner">
        <item>This week</item>
        <item>Last week</item>
        <item>This month</item>
        <item>Last month</item>
        <item>This year</item>
    </string-array>

    <string-array name="report_activity_category_spinner">
        <item>Salary</item>
        <item>Rental income</item>
        <item>Interest</item>
        <item>Gifts</item>
        <item>Other income</item>
        <item>Taxes</item>
        <item>Mortgage</item>
        <item>Credit card</item>
        <item>Utilities</item>
        <item>Food</item>
        <item>Car payment</item>
        <item>Personal</item>
        <item>Activities</item>
        <item>Other expense</item>
    </string-array>

    <string-array name="report_activity_currency_spinner">
        <item>USD</item>
        <item>EUR</item>
        <item>UAH</item>
        <item>RUB</item>
    </string-array>

    <string name="never">Never</string>
    <string-array name="report_activity_recurs_spinner">
        <item>Never</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Every 3 month</item>
    </string-array>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="line">Line</string>
    <string name="period">Period</string>
    <string name="value">Value</string>
    <string name="add_line">Add line</string>
    <string name="text_view_error">Please set value</string>
    <string name="recurs">Recurring</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_title">Delete entry</string>
    <string name="delete_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="share">Share</string>
    <string name="daily_reminder_title">Smart Wallet daily reminder</string>
    <string name="daily_reminder_text">Submit you finance activity</string>
    <string name="weekly_reminder_text">Check your weekly report</string>
    <string name="document_date">Document date</string>


</resources>