<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.rbsoftware.pfm.personalfinancemanager.IncomeFragment">

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_food"
        android:hint="@string/food"
        android:layout_gravity="center"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"  />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_car_payment"
        android:hint="@string/car_payment"

        android:inputType="number"
        android:layout_below="@+id/et_expense_food"
        android:layout_alignLeft="@+id/et_expense_food"
        android:layout_alignStart="@+id/et_expense_food" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_personal"
        android:hint="@string/personal"

        android:inputType="number"
        android:layout_below="@+id/et_expense_car_payment"
        android:layout_alignLeft="@+id/et_expense_car_payment"
        android:layout_alignStart="@+id/et_expense_car_payment" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_activities"
        android:hint="@string/activities"
        android:inputType="number"
        android:layout_below="@+id/et_expense_personal"
        android:layout_alignLeft="@+id/et_expense_personal"
        android:layout_alignStart="@+id/et_expense_personal" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_utilities"
        android:hint="@string/utilities"

        android:inputType="number"
        android:layout_below="@+id/et_expense_activities"
        android:layout_alignLeft="@+id/et_expense_activities"
        android:layout_alignStart="@+id/et_expense_activities" />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_credit_card"
        android:hint="@string/credit_card"

        android:inputType="number"
        android:layout_below="@+id/et_expense_utilities"
        android:layout_alignLeft="@+id/et_expense_utilities"
        android:layout_alignStart="@+id/et_expense_utilities" />


    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_taxes"

        android:hint="@string/taxes"
        android:inputType="number"
        android:layout_below="@+id/et_expense_credit_card"
        android:layout_alignLeft="@+id/et_expense_credit_card"
        android:layout_alignStart="@+id/et_expense_credit_card" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_mortgage"
        android:hint="@string/mortgage"

        android:inputType="number"
        android:layout_below="@+id/et_expense_taxes"
        android:layout_alignLeft="@+id/et_expense_taxes"
        android:layout_alignStart="@+id/et_expense_taxes" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_expense_other"
        android:hint="@string/other_expense"

        android:inputType="number"
        android:layout_below="@+id/et_expense_mortgage"
        android:layout_alignLeft="@+id/et_expense_mortgage"
        android:layout_alignStart="@+id/et_expense_mortgage" />



</RelativeLayout>


</ScrollView>