

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context="com.rbsoftware.pfm.personalfinancemanager.AccountSummary">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/income"
            android:id="@+id/tv_income"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/salary"
            android:id="@+id/tv_income_salary"
            android:layout_below="@+id/tv_income"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="43dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/rental_income"
            android:id="@+id/tv_income_rental"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_income_salary"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/interest"
            android:id="@+id/tv_income_interest"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_income_rental"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gifts"
            android:id="@+id/tv_income_gifts"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_income_interest"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/other_income"
            android:id="@+id/tv_income_other"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_income_gifts"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/expense"
            android:id="@+id/tv_expense"
            android:layout_below="@+id/tv_income_other"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/food"
            android:id="@+id/tv_expense_food"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/car_payment"
            android:id="@+id/tv_expense_car_payment"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_food"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/personal"
            android:id="@+id/tv_expense_personal"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_car_payment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/activities"
            android:id="@+id/tv_expense_activities"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_personal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/utilities"
            android:id="@+id/tv_expense_utilities"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_activities"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credit_card"
            android:id="@+id/tv_expense_credit_card"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_utilities"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/taxes"
            android:id="@+id/tv_expense_taxes"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_credit_card"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mortgage"
            android:id="@+id/tv_expense_mortgage"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_taxes"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/other_expense"
            android:id="@+id/tv_expense_other"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_expense_mortgage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>
</ScrollView>
