<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/income"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/income" />

        <TextView
            android:id="@+id/tv_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000 USD"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/income"

            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emptyIncome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:layoutDirection="ltr"
            android:text="@string/income_is_empty"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/secondary_text_dark" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/salary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr"
        android:paddingBottom="2dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/salary"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rental_income_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr"
        android:paddingBottom="2dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/rental_income"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/interest_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr"
        android:paddingBottom="2dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/interest"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gifts_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr"
        android:paddingBottom="2dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/gifts"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_gifts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/other_income_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layoutDirection="ltr"
        android:paddingBottom="2dp"
        android:paddingEnd="32dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingStart="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layoutDirection="ltr"
            android:text="@string/other_income"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_income_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layoutDirection="ltr"
            android:text="000"
            android:textColor="@android:color/secondary_text_dark"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>